--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,12 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    //------ API Rest
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.google.firebase:firebase-database:20.0.3'
+    implementation 'com.google.gms:google-services:4.3.10'
+
+
     //------
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
