--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,8 @@ dependencies {
     //SDK
     implementation 'com.google.firebase:firebase-analytics'
     implementation platform('com.google.firebase:firebase-bom:29.2.1')
-
+    //--Implementacion Modelo
+    implementation 'com.google.code.gson:gson:2.8.9'
 
     //------
     testImplementation 'junit:junit:4.13.2'
