--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
+        <meta-data android:name="firebase_analytics_collection_deactivated" android:value="true" />
+
+
         <receiver
             android:name=".Actividades.Servicios.SMSBroadcastReceiver"
             android:exported="true">
